Fix skill wrapping on pdf

--- a/styles.css
+++ b/styles.css
@@ -153,6 +153,7 @@ img {
 
 	font-weight: bold;
 	color: var(--skill-rate-text-color);
+	white-space: nowrap;
 }
 
 #left-panel > #skills > .body > .category > .body > .list-element {
